# ox-engine

./: README.md  build all.bat  git push.bat  ox.h  version.txt
app/: CMakeLists.txt  build.bat
app/src/: entry.cpp
engine/: CMakeLists.txt  build.bat
engine/dependencies/glad/: glad.c  glad.h
engine/src/: application.cpp  application.h  defines.h  entry.h
engine/src/core/: assert.h  input.cpp  input.h  log.cpp  log.h  window.cpp  window.h
engine/src/includes/: vendor.h
engine/src/math/: math.cpp  math.h  types.h
engine/src/renderer/: renderer.h
